--- a/src/styles/TopBar.scss
+++ b/src/styles/TopBar.scss
@@ -55,7 +55,7 @@
                 text-decoration: inherit;
                 transition: all .3s;
                 &:hover{
-                        color: #E15C0D;
+                        color: #db804b;
                 }
             }
             
