--- a/src/styles/Slogan.scss
+++ b/src/styles/Slogan.scss
@@ -2,13 +2,15 @@
     @media (max-width: 1000px) {
         grid-template-columns: auto;
         padding: 50px 0;
+        height: auto;
+        gap: 20px;
     }
     background-color: #000000;
-    padding: 150px 0;
     display: grid;
     grid-template-columns: repeat(2, 400px);
     justify-content: center;
     gap: 60px;
+    height: 95vh;
     &Logo{
         align-self: center;
         text-align: end;
@@ -19,7 +21,7 @@
             }
             text-transform: uppercase;
             margin: auto;
-            font-size: 16rem;
+            font-size: 20rem;
             color: #ffffff;
             text-transform: uppercase;
             cursor: default;
@@ -37,8 +39,8 @@
                        0px 12px 1px #E15C0D,;
             transition: all .2s;
             &:hover{
-                transform: scale(1.1);
-                -webkit-transform:scale(1.1);
+                transform: scale(1.05);
+                -webkit-transform:scale(1.05);
                 color: #ff8843;
                 text-shadow: 1px 1px 1px #E15C0D,
                        0px 2px 1px #E15C0D,
@@ -66,7 +68,7 @@
             }
             text-transform: uppercase;
             margin: auto;
-            font-size: 4rem;
+            font-size: 6rem;
             
         }
         &P{
@@ -77,7 +79,7 @@
                 
             }
             margin: auto;
-            font-size: 3rem;
+            font-size: 4rem;
         }
     }
 }
