new section, sservices slogan

--- a/src/styles/Services.scss
+++ b/src/styles/Services.scss
@@ -30,6 +30,7 @@
         text-align: center;
         padding: 20px;
         transition: all .6s;
+        cursor: initial;
         &H1{
             font-size: 2rem;
         }
@@ -59,6 +60,7 @@
         text-align: center;
         padding: 20px;
         transition: all .6s;
+        cursor: initial;
         &H1{
             font-size: 2rem;
         }
@@ -88,6 +90,7 @@
         text-align: center;
         padding: 20px;
         transition: all .6s;
+        cursor: initial;
         &H1{
             font-size: 2rem;
         }
@@ -117,6 +120,7 @@
         text-align: center;
         padding: 20px;
         transition: all .6s;
+        cursor: initial;
         &H1{
             font-size: 2rem;
         }
