--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ a {
   font-weight: 500;
   color: #ffffff;
   text-decoration: inherit;
+  cursor: pointer;
 }
 a:hover {
   color: #E15C0D;
@@ -32,11 +33,11 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding: 0.6em 2em;
+  font-size: 1.2rem;
   font-weight: 500;
   font-family: inherit;
-  background-color: #E15C0D;
+  background-color: #db804b;
   cursor: pointer;
   transition: border-color 0.25s;
   
@@ -44,7 +45,7 @@ button {
 }
 button:hover {
   border-color: #E15C0D;
-  background-color: #ff8138;
+  background-color: #E15C0D;
 }
 button:focus,
 button:focus-visible {
