--- a/src/styles/IndexPage.scss
+++ b/src/styles/IndexPage.scss
@@ -1,8 +1,11 @@
 .indexPage{
     &H1{
+        @media (max-width: 1000px) {
+            font-size: 1.5rem;
+        }
         text-align: center;
         text-transform: uppercase;
-        font-size: 2rem;
-        margin:20px 20px 20px 20px;
+        font-size: 3rem;
+        margin:50px;
     }
 }
