--- a/src/styles/Principal.scss
+++ b/src/styles/Principal.scss
@@ -1,4 +1,6 @@
 @import './IndexPage.scss';
 @import './TopBar.scss';
 @import './Slogan.scss';
+@import './SecondSlogan.scss';
 @import './Services.scss';
+@import './Contact.scss';
