--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -8,6 +8,7 @@
     &Email{
         justify-self: center;
         text-align: center;
+        margin-bottom: 20px;
         &H1{
             @media (max-width: 1000px) {
                 font-size: 2.3rem;
