--- a/src/styles/Principal.scss
+++ b/src/styles/Principal.scss
@@ -4,4 +4,5 @@
 @import './SecondSlogan.scss';
 @import './Services.scss';
 @import './Contact.scss';
+@import './OurTeam.scss';
 @import './Footer.scss';
