--- a/src/styles/OurTeam.scss
+++ b/src/styles/OurTeam.scss
@@ -3,7 +3,7 @@
     &Text{
         @media (max-width: 1000px) {
             grid-template-columns: 1fr;
-            padding: 30px;
+            padding: 100px 20px;
         }
         padding: 100px;
         display: grid;
@@ -40,7 +40,7 @@
     &Base{
         @media (max-width: 1000px) {
             grid-template-columns: 1fr;
-            padding: 30px;
+            padding: 100px 20px;
         }
         padding: 100px;
         display: grid;
@@ -95,13 +95,16 @@
     &People{
         @media (max-width: 1000px) {
             grid-template-columns: 1fr;
-            padding: 20px;
+            padding: 100px 20px;
         }
         display: grid;
         justify-content: center;
         padding: 100px;
         text-align: center;
         &H1{
+            @media (max-width: 1000px) {
+                font-size: 3rem;
+            }
             text-transform: uppercase;
             font-size: 4rem;
         }
@@ -114,6 +117,17 @@
             width: 1ch;
             animation: typing .1s steps(1),
             blink .3s infinite step-end alternate;
+            overflow: hidden;
+        }
+        &P2{
+            margin: auto;
+            margin-top: 30px;
+            text-transform: uppercase;
+            border-bottom: 2px solid #db804b;
+            font-size: 1.5rem;
+            white-space: nowrap;
+            width: 23ch;
+            animation: typing 1s steps(23);
             overflow: hidden;
         }
     }
