--- a/src/styles/Slogan.scss
+++ b/src/styles/Slogan.scss
@@ -48,7 +48,7 @@
                        0px 4px 1px #E15C0D,
                        0px 5px 1px #E15C0D,
                        0px 6px 1px #E15C0D,
-                       0px 7px 1px #919191,
+                       0px 7px 1px #E15C0D,
                        0px 8px 1px #919191,
                        0px 9px 1px #919191,
                        0px 10px 1px #919191,
