--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -74,6 +74,8 @@
                 }
             }
             .buttonForm{
+                text-transform: uppercase;
+                border-radius: 0px;
                 margin-top: 40px;
                 width: auto;
                 justify-self: center;
