--- a/src/styles/OurTeam.scss
+++ b/src/styles/OurTeam.scss
@@ -5,7 +5,7 @@
             grid-template-columns: 1fr;
             padding: 100px 20px;
         }
-        padding: 100px;
+        padding: 100px 20px;
         display: grid;
         grid-template-columns: 1fr 1fr;
         width: auto;
@@ -42,7 +42,7 @@
             grid-template-columns: 1fr;
             padding: 100px 20px;
         }
-        padding: 100px;
+        padding: 100px 20px;
         display: grid;
         text-align: center;
         background-color: #db804b;
@@ -99,7 +99,7 @@
         }
         display: grid;
         justify-content: center;
-        padding: 100px;
+        padding: 100px 20px;
         text-align: center;
         &H1{
             @media (max-width: 1000px) {
