--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -1,85 +1,90 @@
-.contact{
-    @media (max-width: 1000px) {
-        grid-template-columns: 1fr;
-        padding: 20px;
-        margin: 60px 0px;
-    }
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 40px;
-    align-items: center;
+.contact {
+  @media (max-width: 1000px) {
+    grid-template-columns: 1fr;
+    padding: 20px;
     margin: 60px 0px;
-    &Text{
-        justify-self: center;
+  }
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 40px;
+  align-items: center;
+  margin: 60px 0px;
+  &Text {
+    justify-self: center;
+    text-align: center;
+    &H1 {
+      @media (max-width: 1000px) {
+        font-size: 3rem;
+      }
+      margin: auto;
+      font-size: 4rem;
+    }
+    &P {
+      @media (max-width: 1000px) {
+        font-size: 2rem;
+      }
+      width: 10ch;
+      margin: auto;
+      font-size: 3.5rem;
+      border-bottom: 5px solid #db804b;
+    }
+  }
+  &Form {
+    display: grid;
+    &H1 {
+      @media (max-width: 1000px) {
+        margin-top: 50px;
+        font-size: 1.8rem;
         text-align: center;
-        &H1{
-            @media (max-width: 1000px) {
-                font-size: 3rem;
-            }
-            margin: auto;
-            font-size: 4rem;
-        }
-        &P{
-            @media (max-width: 1000px) {
-                font-size: 2rem;
-            }
-            width: 10ch;
-            margin: auto;
-            font-size: 3.5rem;
-            border-bottom: 5px solid #db804b;
-        }
+      }
+      text-transform: uppercase;
+      font-size: 2.4rem;
+      margin-bottom: 50px;
     }
-    &Form{
-        display: grid;
-        &H1{
-            @media (max-width: 1000px) {
-                margin-top: 50px;
-                font-size: 1.8rem;
-                text-align: center;
-            }
-            text-transform: uppercase;
-            font-size: 2.4rem;
-            margin-bottom: 50px;
+    form {
+      @media (max-width: 1000px) {
+        font-size: 2rem;
+        width: auto;
+      }
+      display: grid;
+      gap: 20px;
+      width: 70%;
+      input {
+        font-size: 1.3rem;
+        font-family: "Saira Condensed", sans-serif !important;
+        padding: 10px;
+        border: none;
+        background-color: #000000;
+        border-bottom: 1px solid #db804b;
+        &::placeholder {
+          color: #c7c7c7;
         }
-        form{
-            @media (max-width: 1000px) {
-                font-size: 2rem;
-                width: auto;
-            }
-            display: grid;
-            gap: 20px;
-            width: 70%;
-            input{
-                font-size: 1.3rem;
-                font-family: "Saira Condensed", sans-serif !important;
-                padding: 10px;
-                border: none;
-                background-color: #000000;
-                border-bottom: 1px solid #db804b;
-                &::placeholder{
-                    color: #c7c7c7;
-                }
-            }
-            textarea{
-                font-size: 1.3rem;
-                font-family: "Saira Condensed", sans-serif !important;
-                padding: 10px;
-                border: none;
-                background-color: #000000;
-                border-bottom: 1px solid #db804b;
-                color: #db804b;
-                min-height: 70px;
-                &::placeholder{
-                    color: #c7c7c7;
-                }
-            }
-            .buttonForm{
-                text-transform: uppercase;
-                border-radius: 0px;
-                margin-top: 40px;
-                width: auto;
-                justify-self: center;
-            }
+      }
+      textarea {
+        font-size: 1.3rem;
+        font-family: "Saira Condensed", sans-serif !important;
+        padding: 10px;
+        border: none;
+        background-color: #000000;
+        border-bottom: 1px solid #db804b;
+        color: #db804b;
+        min-height: 70px;
+        &::placeholder {
+          color: #c7c7c7;
         }
+      }
+      .buttonForm {
+        text-transform: uppercase;
+        border-radius: 0px;
+        margin-top: 40px;
+        width: auto;
+        justify-self: center;
+      }
     }
+  }
+}
+.message {
+  margin: 30px 0px;
+  text-align: center;
+  font-size: 2rem;
 }
